--- a/microservices/www/app/src/templates/index.html
+++ b/microservices/www/app/src/templates/index.html
@@ -357,7 +357,7 @@
       <h4 id="add-a-remote-for-the-service">Add a remote for the service</h4>
       <pre><code class="lang-bash">$ hasura remotes generate &lt;service-name&gt; &gt;&gt; conf/ci.yaml
       </code></pre>
-      <p>This will generate the remotes configuration, which will be appended to the conf/ci.yaml file under the {{ cluster.name }} key.<br>    Make sure it is properly indented!</p>
+      <p>This will generate the remotes configuration, which will be appended to the conf/ci.yaml file.
       <h4 id="apply-your-changes">Apply your changes</h4>
       <pre><code>
       $ git add .
