--- a/microservices/www/app/src/templates/index.html
+++ b/microservices/www/app/src/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/markdown.css">
+    <link rel="stylesheet" type="text/css" href="../static/markdown.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   </head>  
   <body>
