--- a/microservices/app/src/templates/file_user.html
+++ b/microservices/app/src/templates/file_user.html
@@ -50,7 +50,7 @@
             </script>
 
             <hr/>
-            <a href="http://auth.{{base_domain}}/ui/logout?redirect_url=https%3A%2F%2Fapp.{{base_domain}}%2Fexamples%2Fuser-files">Logout</a>
+            <a href="http://auth.{{base_domain}}/ui/logout?redirect_url=https%3A%2F%2Fapp.{{base_domain}}%2Fexamples%2Ffilestore">Logout</a>
         </div>
     </body>
 </html>
