--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -9,6 +9,21 @@
             <h1>Hello world.</h1>
             <hr/>
             Make changes at <code>microservices/app/src/server.py</code> and <code>git push</code> to deploy.
+            <br/>
+            <br/>
+            <h3>Backend examples</h3>
+            <hr/>
+            <a href="/examples/data">/examples/data</a>:<br/>
+            Flask code fetching data from postgres without an ORM.<br/>
+            [Source: <code>microservices/app/src/hasura.py</code>]
+            <br/><br/>
+            <a href="/examples/auth">/examples/auth</a>:<br/>
+            Allow only authenticated users to access this page.<br/>
+            [Source: <code>microservices/app/src/hasura.py</code>]
+            <br/><br/>
+            <a href="/examples/filestore">/examples/filestore</a>:<br/>
+            File upload/download features.<br/>
+            [Source: <code>microservices/app/src/hasura.py</code>]
         </div>
     </body>
 </html>
