--- a/microservices/app/src/templates/file_anonymous.html
+++ b/microservices/app/src/templates/file_anonymous.html
@@ -8,7 +8,7 @@
         <div style="max-width: 800px; margin: 0 auto;">
             <h1>You must login to upload files.</h1>
             <hr/>
-            <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Fuser-files">Login</a>
+            <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Ffilestore">Login</a>
         </div>
     </body>
 </html>
