--- a/microservices/app/src/templates/filestore_user.html
+++ b/microservices/app/src/templates/filestore_user.html
@@ -2,7 +2,10 @@
 <html>
     <head>
         <title>Hello world - Python Flask</title>
-        <style> code { color: #222; background: #f9f9f9;} </style>
+        <style>
+            body {font-family: sans-serif; line-height: 23px;}
+            code {color: #222; background: #f9f9f9;}
+        </style>
     </head>
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
