--- a/microservices/app/src/templates/auth_user.html
+++ b/microservices/app/src/templates/auth_user.html
@@ -9,6 +9,7 @@
     </head>
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
+            <a href="/">/</a>
             <h1>You are logged in!</h1>
             <hr/>
             <label>User Id:</label> {{user_id}}<br/>
