--- a/microservices/app/src/templates/filestore_user.html
+++ b/microservices/app/src/templates/filestore_user.html
@@ -9,6 +9,7 @@
     </head>
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
+            <a href="/">Back to /</a>
             <h1>Your files</h1>
             <hr/>
             <ul>
