--- a/microservices/app/src/templates/data.html
+++ b/microservices/app/src/templates/data.html
@@ -9,6 +9,7 @@
     </head>
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
+            <a href="/">Back to /</a>
             <h1>Articles fetched from article table</h1>
             <hr/>
             Run:<br/>
