--- a/microservices/app/src/templates/auth_user.html
+++ b/microservices/app/src/templates/auth_user.html
@@ -10,6 +10,8 @@
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
             <a href="/">/</a>
+            <div style="float: right;">[Source: <code>microservices/app/src/auth.py</code>]</div>
+            <br/>
             <h1>You are logged in!</h1>
             <hr/>
             <label>User Id:</label> {{user_id}}<br/>
