--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -18,15 +18,12 @@
             <hr/>
             <a href="/examples/data">/examples/data</a>:<br/>
             Flask code fetching data from postgres without an ORM.<br/>
-            [Source: <code>microservices/app/src/data.py</code>]
             <br/><br/>
             <a href="/examples/auth">/examples/auth</a>:<br/>
-            Allow only authenticated users to access this page.<br/>
-            [Source: <code>microservices/app/src/auth.py</code>]
+            Enable auth without writing any auth &amp; session handling code.<br/>
             <br/><br/>
             <a href="/examples/filestore">/examples/filestore</a>:<br/>
-            File upload/download features.<br/>
-            [Source: <code>microservices/app/src/filestore.py</code>]
+            Allow users to upload files without writing file-handling code.<br/>
         </div>
     </body>
 </html>
