--- a/microservices/app/src/templates/auth_anonymous.html
+++ b/microservices/app/src/templates/auth_anonymous.html
@@ -10,7 +10,9 @@
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
             <a href="/">Back to /</a>
-            <h1>You are not logged in!</h1>
+            <div style="float: right;">[Source: <code>microservices/app/src/auth.py</code>]</div>
+            <br/>
+            <h1>You are not logged in.</h1>
             <hr/>
             <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Fauth">Login</a>
         </div>
