--- a/microservices/app/src/templates/data.html
+++ b/microservices/app/src/templates/data.html
@@ -10,6 +10,8 @@
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
             <a href="/">Back to /</a>
+            <div style="float: right;">[Source: <code>microservices/app/src/data.py</code>]</div>
+            <br/>
             <h1>Articles fetched from article table</h1>
             <hr/>
             Run:<br/>
