--- a/microservices/app/src/templates/filestore_anonymous.html
+++ b/microservices/app/src/templates/filestore_anonymous.html
@@ -10,6 +10,8 @@
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
             <a href="/">Back to /</a>
+            <div style="float: right;">[Source: <code>microservices/app/src/filestore.py</code>]</div>
+            <br/>
             <h1>You must login to upload files.</h1>
             <hr/>
             <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Ffilestore">Login</a>
