--- a/microservices/app/src/templates/filestore_user.html
+++ b/microservices/app/src/templates/filestore_user.html
@@ -10,16 +10,23 @@
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
             <a href="/">Back to /</a>
+            <div style="float: right;">[Source: <code>microservices/app/src/filestore.py</code>]</div>
+            <br/>
             <h1>Your files</h1>
             <hr/>
             <ul>
-                {% for file in files %}
-                <li>
-                    <label>Id:</label> {{file.file_id}}<br/>
-                    <label>Type:</label> {{file.content_type}}<br/>
-                    <label>Size:</label> {{file.file_size}}<br/>
-                </li>
-                {% endfor %}
+                {% if files|length == 0 %}
+                    You haven't uploaded any files yet.
+                {% else %}
+                    {% for file in files %}
+                    <li>
+                        <label>Id:</label> {{file.file_id}}<br/>
+                        <label>Type:</label> {{file.content_type}}<br/>
+                        <label>Size:</label> {{file.file_size}}<br/>
+                        <label>Download link:</label> <a href="http://filestore.{{base_domain}}/v1/filestore/{{file.file_size}}">http://filestore.{{base_domain}}/v1/filestore/{{file.file_size}}</a><br/>
+                    </li>
+                    {% endfor %}
+                {% endif %}
             </ul>
             <hr/>
             <input id="file_input" type="file">
