--- a/microservices/app/src/templates/auth_user.html
+++ b/microservices/app/src/templates/auth_user.html
@@ -9,7 +9,7 @@
     </head>
     <body style="color: #333">
         <div style="max-width: 800px; margin: 0 auto;">
-            <a href="/">/</a>
+            <a href="/">Back to /</a>
             <div style="float: right;">[Source: <code>microservices/app/src/auth.py</code>]</div>
             <br/>
             <h1>You are logged in!</h1>
