--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -17,10 +17,11 @@
             <h3>Backend examples</h3>
             <hr/>
             <a href="/examples/data">/examples/data</a>:<br/>
-            Flask code fetching data from postgres without an ORM.<br/>
+            Flask code fetching data from postgres without an ORM.
             <br/><br/>
             <a href="/examples/auth">/examples/auth</a>:<br/>
-            Enable auth without writing any auth &amp; session handling code.<br/>
+            Integrates with Hasura's auth UI kit to add login/signup functionality without any code.
+            Uses Hasura API gateway to checks if a user is logged in without any session-handling code.
             <br/><br/>
             <a href="/examples/filestore">/examples/filestore</a>:<br/>
             Allow users to upload files without writing file-handling code.<br/>
