--- a/microservices/app/src/templates/auth_anonymous.html
+++ b/microservices/app/src/templates/auth_anonymous.html
@@ -16,8 +16,8 @@
             <hr/>
             This page displays your user information if you are logged in.
             <hr/>
-            <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Fauth">Login</a> &middot;
-            <a href="http://auth.{{base_domain}}/ui/signup?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Fauth">Signup</a>
+            <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.{{base_domain}}%2Fexamples%2Fauth">Login</a> &middot;
+            <a href="http://auth.{{base_domain}}/ui/signup?redirect_url=https%3A%2F%2Fapp.{{base_domain}}%2Fexamples%2Fauth">Signup</a>
         </div>
     </body>
 </html>
