--- a/microservices/app/src/templates/filestore_user.html
+++ b/microservices/app/src/templates/filestore_user.html
@@ -37,7 +37,7 @@
                 var file_input = document.getElementById('file_input');
                 upload_btn.onclick = function () {
 
-                    if !(file_input && file_input.files && file_input.files[0]) {
+                    if (!(file_input && file_input.files && file_input.files[0])) {
                         upload_btn.innerHTML = 'Please select a file and try again';
                         return;
                     }
