Removes hasura-app.io. URLs

--- a/microservices/app/src/templates/filestore_anonymous.html
+++ b/microservices/app/src/templates/filestore_anonymous.html
@@ -14,7 +14,7 @@
             <br/>
             <h1>You must login to upload files.</h1>
             <hr/>
-            <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Ffilestore">Login</a>
+            <a href="http://auth.{{base_domain}}/ui/login?redirect_url=https%3A%2F%2Fapp.{{base_domain}}%2Fexamples%2Ffilestore">Login</a>
         </div>
     </body>
 </html>
