--- a/microservices/app/src/templates/auth_user.html
+++ b/microservices/app/src/templates/auth_user.html
@@ -17,7 +17,7 @@
             <label>User Id:</label> {{user_id}}<br/>
             <label>Roles:</label> {{roles}}<br/>
             <hr/>
-            <a href="http://auth.{{base_domain}}/ui/logout?redirect_url=https%3A%2F%2Fapp.abaft85.hasura-app.io%2Fexamples%2Fauth">Logout</a>
+            <a href="http://auth.{{base_domain}}/ui/logout?redirect_url=https%3A%2F%2Fapp.{{base_domain}}%2Fexamples%2Fauth">Logout</a>
         </div>
     </body>
 </html>
